--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -5,7 +5,7 @@
 @syntax-text-color: #ccc;
 @syntax-cursor-color: #ffee68;
 @syntax-selection-color: #5a5d63;
-@syntax-background-color: #1b2028;
+@syntax-background-color: @code-background;
 
 // Guide colors
 @syntax-wrap-guide-color: rgba(243, 255, 181, 0.05);
@@ -28,3 +28,6 @@
 @syntax-color-added: #A8FF60;
 @syntax-color-modified: #E9C062;
 @syntax-color-removed: #CC6666;
+
+//Custom
+@code-background: rgb(21,23,24); // editor background
